Fixed spacing of canvas in space game

--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,7 @@ strong {
     height: 600px;
     border: 1px solid black;
 }
+
+canvas {
+    float: center;
+}
